src/antlr/PythonFlaskParser.java
// Generated from C:/Users/scc/IdeaProjects/CompilerProject/src/antlr/PythonFlaskParser.g4 by ANTLR 4.13.2
package antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class PythonFlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, NEWLINE=3, WS=4, COMMENT=5, DEF=6, CLASS=7, RETURN=8, 
		IMPORT=9, FROM=10, IF=11, ELIF=12, ELSE=13, FOR=14, WHILE=15, IN=16, PASS=17, 
		BREAK=18, CONTINUE=19, TRUE=20, FALSE=21, NONE=22, NOT=23, AND=24, OR=25, 
		WITH=26, AS=27, AT=28, LPAREN=29, RPAREN=30, LBRACK=31, RBRACK=32, LBRACE=33, 
		RBRACE=34, COLON=35, COMMA=36, DOT=37, SEMICOLON=38, ASSIGN=39, ADD=40, 
		SUB=41, MUL=42, DIV=43, MOD=44, EQ=45, NEQ=46, LT=47, GT=48, LE=49, GE=50, 
		NAME=51, NUMBER=52, STRING=53;
	public static final int
		RULE_file_input = 0, RULE_decorated_def = 1, RULE_decorator = 2, RULE_decoratorArgs = 3, 
		RULE_namedDecoratorArgs = 4, RULE_stmt = 5, RULE_simple_stmt = 6, RULE_small_stmt = 7, 
		RULE_expr_stmt = 8, RULE_target = 9, RULE_pass_stmt = 10, RULE_break_stmt = 11, 
		RULE_continue_stmt = 12, RULE_return_stmt = 13, RULE_compound_stmt = 14, 
		RULE_function_def = 15, RULE_parameterList = 16, RULE_class_def = 17, 
		RULE_with_stmt = 18, RULE_if_stmt = 19, RULE_for_stmt = 20, RULE_while_stmt = 21, 
		RULE_suite = 22, RULE_import_stmt = 23, RULE_dottedName = 24, RULE_importTargets = 25, 
		RULE_expr = 26, RULE_or_test = 27, RULE_and_test = 28, RULE_not_test = 29, 
		RULE_comparison = 30, RULE_compOp = 31, RULE_arithExpr = 32, RULE_term = 33, 
		RULE_factor = 34, RULE_power = 35, RULE_atom = 36, RULE_atom_base = 37, 
		RULE_trailer = 38, RULE_index = 39, RULE_argList = 40, RULE_namedArgList = 41, 
		RULE_list_literal = 42;
	private static String[] makeRuleNames() {
		return new String[] {
			"file_input", "decorated_def", "decorator", "decoratorArgs", "namedDecoratorArgs", 
			"stmt", "simple_stmt", "small_stmt", "expr_stmt", "target", "pass_stmt", 
			"break_stmt", "continue_stmt", "return_stmt", "compound_stmt", "function_def", 
			"parameterList", "class_def", "with_stmt", "if_stmt", "for_stmt", "while_stmt", 
			"suite", "import_stmt", "dottedName", "importTargets", "expr", "or_test", 
			"and_test", "not_test", "comparison", "compOp", "arithExpr", "term", 
			"factor", "power", "atom", "atom_base", "trailer", "index", "argList", 
			"namedArgList", "list_literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, "'def'", "'class'", "'return'", "'import'", 
			"'from'", "'if'", "'elif'", "'else'", "'for'", "'while'", "'in'", "'pass'", 
			"'break'", "'continue'", "'True'", "'False'", "'None'", "'not'", "'and'", 
			"'or'", "'with'", "'as'", "'@'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"':'", "','", "'.'", "';'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "NEWLINE", "WS", "COMMENT", "DEF", "CLASS", 
			"RETURN", "IMPORT", "FROM", "IF", "ELIF", "ELSE", "FOR", "WHILE", "IN", 
			"PASS", "BREAK", "CONTINUE", "TRUE", "FALSE", "NONE", "NOT", "AND", "OR", 
			"WITH", "AS", "AT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", 
			"RBRACE", "COLON", "COMMA", "DOT", "SEMICOLON", "ASSIGN", "ADD", "SUB", 
			"MUL", "DIV", "MOD", "EQ", "NEQ", "LT", "GT", "LE", "GE", "NAME", "NUMBER", 
			"STRING"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PythonFlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PythonFlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_inputContext extends ParserRuleContext {
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
	 
		public File_inputContext() { }
		public void copyFrom(File_inputContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FileInputNodeContext extends File_inputContext {
		public TerminalNode EOF() { return getToken(PythonFlaskParser.EOF, 0); }
		public List<TerminalNode> NEWLINE() { return getTokens(PythonFlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonFlaskParser.NEWLINE, i);
		}
		public List<Decorated_defContext> decorated_def() {
			return getRuleContexts(Decorated_defContext.class);
		}
		public Decorated_defContext decorated_def(int i) {
			return getRuleContext(Decorated_defContext.class,i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public FileInputNodeContext(File_inputContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterFileInputNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitFileInputNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitFileInputNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file_input);
		int _la;
		try {
			int _alt;
			_localctx = new FileInputNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(86);
					match(NEWLINE);
					}
					} 
				}
				setState(91);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(97);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15765900267278216L) != 0)) {
				{
				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case AT:
					{
					setState(92);
					decorated_def();
					}
					break;
				case CLASS:
				case RETURN:
				case IMPORT:
				case FROM:
				case IF:
				case FOR:
				case WHILE:
				case PASS:
				case BREAK:
				case CONTINUE:
				case TRUE:
				case FALSE:
				case NONE:
				case NOT:
				case WITH:
				case LPAREN:
				case LBRACK:
				case ADD:
				case SUB:
				case NAME:
				case NUMBER:
				case STRING:
					{
					setState(93);
					stmt();
					}
					break;
				case NEWLINE:
					{
					setState(94);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(100);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Decorated_defContext extends ParserRuleContext {
		public Decorated_defContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorated_def; }
	 
		public Decorated_defContext() { }
		public void copyFrom(Decorated_defContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecoratedDefNodeContext extends Decorated_defContext {
		public Function_defContext function_def() {
			return getRuleContext(Function_defContext.class,0);
		}
		public List<DecoratorContext> decorator() {
			return getRuleContexts(DecoratorContext.class);
		}
		public DecoratorContext decorator(int i) {
			return getRuleContext(DecoratorContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(PythonFlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(PythonFlaskParser.NEWLINE, i);
		}
		public DecoratedDefNodeContext(Decorated_defContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterDecoratedDefNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitDecoratedDefNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitDecoratedDefNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Decorated_defContext decorated_def() throws RecognitionException {
		Decorated_defContext _localctx = new Decorated_defContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_decorated_def);
		int _la;
		try {
			_localctx = new DecoratedDefNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(102);
				decorator();
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==AT );
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(107);
				match(NEWLINE);
				}
				}
				setState(112);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(113);
			function_def();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorContext extends ParserRuleContext {
		public DecoratorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decorator; }
	 
		public DecoratorContext() { }
		public void copyFrom(DecoratorContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorNodeContext extends DecoratorContext {
		public TerminalNode AT() { return getToken(PythonFlaskParser.AT, 0); }
		public DottedNameContext dottedName() {
			return getRuleContext(DottedNameContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PythonFlaskParser.NEWLINE, 0); }
		public TerminalNode LPAREN() { return getToken(PythonFlaskParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PythonFlaskParser.RPAREN, 0); }
		public DecoratorArgsContext decoratorArgs() {
			return getRuleContext(DecoratorArgsContext.class,0);
		}
		public DecoratorNodeContext(DecoratorContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterDecoratorNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitDecoratorNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitDecoratorNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorContext decorator() throws RecognitionException {
		DecoratorContext _localctx = new DecoratorContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_decorator);
		int _la;
		try {
			_localctx = new DecoratorNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			match(AT);
			setState(116);
			dottedName();
			setState(122);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LPAREN) {
				{
				setState(117);
				match(LPAREN);
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 15765899930763264L) != 0)) {
					{
					setState(118);
					decoratorArgs();
					}
				}

				setState(121);
				match(RPAREN);
				}
			}

			setState(124);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DecoratorArgsContext extends ParserRuleContext {
		public NamedDecoratorArgsContext namedDecoratorArgs() {
			return getRuleContext(NamedDecoratorArgsContext.class,0);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PythonFlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PythonFlaskParser.COMMA, i);
		}
		public DecoratorArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decoratorArgs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterDecoratorArgs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitDecoratorArgs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitDecoratorArgs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DecoratorArgsContext decoratorArgs() throws RecognitionException {
		DecoratorArgsContext _localctx = new DecoratorArgsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_decoratorArgs);
		int _la;
		try {
			int _alt;
			setState(139);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(126);
				namedDecoratorArgs();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(127);
				expr();
				setState(132);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(128);
						match(COMMA);
						setState(129);
						expr();
						}
						} 
					}
					setState(134);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(137);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(135);
					match(COMMA);
					setState(136);
					namedDecoratorArgs();
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class NamedDecoratorArgsContext extends ParserRuleContext {
		public NamedDecoratorArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_namedDecoratorArgs; }
	 
		public NamedDecoratorArgsContext() { }
		public void copyFrom(NamedDecoratorArgsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class NamedDecoratorArgsNodeContext extends NamedDecoratorArgsContext {
		public List<TerminalNode> NAME() { return getTokens(PythonFlaskParser.NAME); }
		public TerminalNode NAME(int i) {
			return getToken(PythonFlaskParser.NAME, i);
		}
		public List<TerminalNode> ASSIGN() { return getTokens(PythonFlaskParser.ASSIGN); }
		public TerminalNode ASSIGN(int i) {
			return getToken(PythonFlaskParser.ASSIGN, i);
		}
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PythonFlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PythonFlaskParser.COMMA, i);
		}
		public NamedDecoratorArgsNodeContext(NamedDecoratorArgsContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterNamedDecoratorArgsNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitNamedDecoratorArgsNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitNamedDecoratorArgsNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamedDecoratorArgsContext namedDecoratorArgs() throws RecognitionException {
		NamedDecoratorArgsContext _localctx = new NamedDecoratorArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_namedDecoratorArgs);
		int _la;
		try {
			_localctx = new NamedDecoratorArgsNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(NAME);
			setState(142);
			match(ASSIGN);
			setState(143);
			expr();
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(144);
				match(COMMA);
				setState(145);
				match(NAME);
				setState(146);
				match(ASSIGN);
				setState(147);
				expr();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	 
		public StmtContext() { }
		public void copyFrom(StmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CompoundStmtNodeContext extends StmtContext {
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public CompoundStmtNodeContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterCompoundStmtNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitCompoundStmtNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitCompoundStmtNode(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStmtNodeContext extends StmtContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public SimpleStmtNodeContext(StmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterSimpleStmtNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitSimpleStmtNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitSimpleStmtNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_stmt);
		try {
			setState(155);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
			case IMPORT:
			case FROM:
			case PASS:
			case BREAK:
			case CONTINUE:
			case TRUE:
			case FALSE:
			case NONE:
			case NOT:
			case LPAREN:
			case LBRACK:
			case ADD:
			case SUB:
			case NAME:
			case NUMBER:
			case STRING:
				_localctx = new SimpleStmtNodeContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(153);
				simple_stmt();
				}
				break;
			case CLASS:
			case IF:
			case FOR:
			case WHILE:
			case WITH:
				_localctx = new CompoundStmtNodeContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(154);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
	 
		public Simple_stmtContext() { }
		public void copyFrom(Simple_stmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class SimpleStmtLineNodeContext extends Simple_stmtContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public List<TerminalNode> SEMICOLON() { return getTokens(PythonFlaskParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PythonFlaskParser.SEMICOLON, i);
		}
		public TerminalNode NEWLINE() { return getToken(PythonFlaskParser.NEWLINE, 0); }
		public SimpleStmtLineNodeContext(Simple_stmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).enterSimpleStmtLineNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PythonFlaskParserListener ) ((PythonFlaskParserListener)listener).exitSimpleStmtLineNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PythonFlaskParserVisitor ) return ((PythonFlaskParserVisitor<? extends T>)visitor).visitSimpleStmtLineNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simple_stmt);
		int _la;
		try {
			_localctx = new SimpleStmtLineNodeContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			small_stmt();
			setState(162);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SEMICOLON) {
				{
				{
				setState(158);
				match(SEMICOLON);
				setState(159);
				small_stmt();
				}
				}
				setState(164);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(165);
				match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
